--- a/src/app/features/admin-layout/service-management/service-management.component.html
+++ b/src/app/features/admin-layout/service-management/service-management.component.html
@@ -30,7 +30,7 @@
           <button 
    
           *ngFor="let service of services; let i = index" 
-          class="transition-all hover:scale-110 group bg-white hover:bg-green-900 hover:text-white hover:border-green-500   h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10 ">
+          class="transition-all hover:scale-110 group bg-white border-green-800 hover:bg-green-900 hover:text-white hover:border-green-500   h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
   
             <!-- Header -->
             <div class="flex gap-4 items-center">
