--- a/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
+++ b/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col items-center w-full h-full max-w-full p-4 overflow-y-auto">
   <!-- Header Section -->
-  <header class="relative flex flex-col items-center w-full px-4 py-3 overflow-hidden bg-white rounded-lg shadow-md sm:px-6 sm:py-4">
-    <div class="z-10 flex items-center justify-between w-full max-w-full">
+  <header class="relative flex items-center w-full px-4 py-5 bg-white rounded-lg shadow-md">
+    <div class="z-10 flex items-center w-full max-w-screen-xl mx-auto">
       <div class="flex items-center">
         <img src="./assets/logo/vsu.png" alt="Registrar logo" class="w-16 h-16 rounded-full shadow-lg sm:w-[80px] sm:h-[80px]">
       </div>
@@ -10,6 +10,7 @@
       <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/85c09607b00c21dff8197a29be4f9bd6ca70de103a8f9517fccb03f7820f1037?apiKey=f35c25b17acb406083beeda46a28c843" alt="VSU background" class="object-cover w-full h-full rounded-lg">
     </div>
   </header>
+
 
    <!-- Below Image Header: Registrar and Time Info -->
    <div class="flex flex-col items-center justify-between w-full px-4 py-3 bg-white sm:flex-row sm:px-6 sm:py-4">
@@ -153,15 +154,15 @@
           <div class="p-2 space-y-4">
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
               <div>
-                <label class="block mb-1 text-sm font-medium text-gray-600">Services <span *ngIf="selectedServices.length<=0" class="text-red-400 font-thin">*Please select at least one service</span></label>
+                <label class="block mb-1 text-sm font-medium text-gray-600">Services <span *ngIf="selectedServices.length<=0" class="font-thin text-red-400">*Please select at least one service</span></label>
                 <div class="w-full px-3 py-2 text-sm bg-white border border-gray-300 rounded-md">{{ showServiceNames() || 'Nothing was selected.' }}</div>
               </div>
               <div>
-                <label class="block mb-1 text-sm font-medium text-gray-600">Gender <span *ngIf="gender == ''" class="text-red-400 font-thin">*Please specify gender.</span></label>
+                <label class="block mb-1 text-sm font-medium text-gray-600">Gender <span *ngIf="gender == ''" class="font-thin text-red-400">*Please specify gender.</span></label>
                 <div class="w-full px-3 py-2 text-sm bg-white border border-gray-300 rounded-md">{{ gender || 'Not Specified' }}</div>
               </div>
               <div>
-                <label class="block mb-1 text-sm font-medium text-gray-600">Name <span *ngIf="customerName == ''" class="text-red-400 font-thin">*Please specify your name</span></label>
+                <label class="block mb-1 text-sm font-medium text-gray-600">Name <span *ngIf="customerName == ''" class="font-thin text-red-400">*Please specify your name</span></label>
                 <div class="w-full px-3 py-2 text-sm bg-white border border-gray-300 rounded-md">{{ customerName || 'Not Specified' }}</div>
               </div>
               <div>
@@ -205,7 +206,7 @@
 
   <!-- Modal for Queue Confirmation -->
   <!-- <div *ngIf="showModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
-    <div class="w-full max-w-sm bg-white animate-pop rounded-lg shadow-lg sm:max-w-md">
+    <div class="w-full max-w-sm bg-white rounded-lg shadow-lg animate-pop sm:max-w-md">
       <div class="relative p-6 overflow-hidden">
         <div class="absolute inset-0 flex items-center justify-center opacity-10">
           <img src="./assets/logo/vsu.png" alt="VSU Logo" class="object-contain w-full h-full">
@@ -262,8 +263,8 @@
   ></app-feedback>
 
   <app-snackbar></app-snackbar>
-  <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
+  <div *ngIf="isLoading" class="absolute z-10 flex flex-col items-center justify-center w-full h-full overflow-hidden bg-white cursor-wait ">
     <app-lottie-animation class=" w-52 h-52 animate-pop" animation="loader"></app-lottie-animation>
-    <div  class="tracking-wider text-sm animate-bounce animate-pop">Please Wait</div>
+    <div  class="text-sm tracking-wider animate-bounce animate-pop">Please Wait</div>
   </div>
 </section>
